- [Bugfix] Server connection timeout when moving or duplicating large files (Backblaze B2) (#11185)
- [Bugfix] Certificate trust prompt regardless of override in keychain (macOS) (#11118)
- [Bugfix] Failure saving credentials (CLI, Windows) (#11098)
- [Bugfix] Unable to connect to cn-north-1 (S3) (#11197)
- [Bugfix] Access shared files (OneDrive Business) (#11102)

7.6.2
- [Feature] Allow to set password for shared link of file (Dropbox, Nextcloud, DRACOON)
- [Bugfix] Missing folders with delete marker on placeholder for buckets with versioning enabled (S3)

7.6.1
- [Bugfix] Unable to authenticate using PuTTY Pageant (SFTP, Windows)
- [Bugfix] Set modification date on uploaded files (DRACOON)
- [Bugfix] Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)

7.6.0
- [Feature] Lock and unlock vaults using option in menu or toolbar (Cryptomator) (#10798)
- [Feature] Support for Files.com using native REST API (Files.com)
- [Feature] Restore files in Glacier storage class (S3)
- [Feature] Support for AES/GCM (aes128-gcm@openssh.com, aes256-gcm@openssh.com) ciphers (SFTP) (#9809)

7.5.1
- [Bugfix] Changes not saved when editing bookmark (Windows)
- [Bugfix] Failure running application (CLI, macOS) (#11139)
- [Bugfix] Navigation buttons in browser window do not work (macOS) (#11140)
- [Bugfix] Upload files using S3 direct upload to encrypted rooms (DRACOON)
- [Bugfix] Upload files to encrypted rooms (CLI, DRACOON)

7.5.0
- [Feature] Interoperability with macOS 11
- [Feature] Column for storage class in browser (S3)
- [Bugfix] Use STANDARD for default storage class (Google Storage) (#11062)
- [Bugfix] Switch to UTF-8 for encoding HTTP authentication header (WebDAV)
- [Bugfix] SNI support for TLS connections (FTP) (#9257)
- [Bugfix] Handle formatting errors in ~/.aws/credentials (S3)
- [Bugfix] Crash accessing files with colon in name (Windows) (#11075)