@@ -46,6 +46,7 @@
         ul li ul li {
             list-style-type: disc;
         }
+
     </style>
 </head>
 
@@ -64,7 +65,9 @@
     <li><span class="label label-success">Feature</span> Connect via SSH tunnel through bastion host with JumpHost
         configuration directive (SFTP) (<a target="_blank" href="https://trac.cyberduck.io/ticket/2865">#2865</a>)
     </li>
-    <li><span class="label label-success">Feature</span> Bookmark toggle control and search field moved to toolbar (macOS)</li>
+    <li><span class="label label-success">Feature</span> Bookmark toggle control and search field moved to toolbar
+        (macOS)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Accessing CloudFront and KMS configuration ignores
         ~/.aws/credentials (<a target="_blank" href="https://trac.cyberduck.io/ticket/11175">#11175</a>)
     </li>
@@ -86,7 +89,10 @@
     <li><span class="label label-warning">Bugfix</span> Access shared files (OneDrive Business) (<a
         target="_blank" href="https://trac.cyberduck.io/ticket/11102">#11102</a>)
     </li>
-
+    <li><span class="label label-warning">Bugfix</span> Read external_id from AssumeRole configuration in
+        ~/.aws/credentials (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11229">#11229</a>))
+    </li>
 </ul>
 
 <p>
