@@ -11,6 +11,7 @@ https://cyberduck.io/
 - [Bugfix] Failure saving credentials (CLI, Windows) (#11098)
 - [Bugfix] Unable to connect to cn-north-1 (S3) (#11197)
 - [Bugfix] Access shared files (OneDrive Business) (#11102)
+- [Bugfix] Read external_id from AssumeRole configuration in ~/.aws/credentials (S3) (#11229)
 
 7.6.2
 - [Feature] Allow to set password for shared link of file (Dropbox, Nextcloud, DRACOON)
